# docs/swagger.json
@@ -414,6 +414,53 @@
                 }
             }
         },
+        "/my-profiles": {
+            "get": {
+                "description": "Retrieve a Profile by current authenticated user.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Profile"
+                ],
+                "summary": "Get all Profiles by current authenticated user.",
+                "responses": {
+                    "200": {
+                        "description": "Profile retrieved successfully",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/models.SuccessResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/models.Profile"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "404": {
+                        "description": "Profile not found",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/my-reviews": {
             "get": {
                 "security": [
@@ -472,27 +519,24 @@
                 }
             }
         },
-        "/mytransactions": {
+        "/my-transactions": {
             "get": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "retrieve all transactions associated with the authenticated user",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Retrieve a list of transactions associated with the authenticated user.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "transactions"
+                    "Transaction"
                 ],
-                "summary": "Get my transactions",
+                "summary": "Get all transactions by current authenticated user.",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Success fetch my transactions",
                         "schema": {
                             "allOf": [
                                 {
@@ -513,7 +557,7 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Invalid input",
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
@@ -525,7 +569,7 @@
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Internal server error",
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
@@ -551,6 +595,12 @@
                         "type": "string",
                         "description": "Product name filter",
                         "name": "productName",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Category filter",
+                        "name": "category",
                         "in": "query"
                     },
                     {
